2013-05-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot): For 'set contour; splot ... with labels'
	do not generate extra blank lines in the key box.

	* src/show.c:  Treat "show cntrlabel" as "show contour".

	* src/plot3d.c (eval_3dplots): Give a more informative error message
	on "splot with labels" without a prior "set contour".

2012-05-18  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (f_column f_stringcolumn):
	f_stringcolumn now issues a warning if a named column was not found 
	in the header, just as f_column does. Additionally, if there is a
	partial match, print the name in the warning between double quotes.

2013-05-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_enhanced_flush):  Empirical fix
	for y coordinate after save/restore sequence (enhanced text mode '@').
	I'm not convinced this is correct, but it does seem to work in practice.

2013-05-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c src/graph3d.h src/plot3d.c src/save.c src/set.c
	src/show.c src/unset.c:

	Contour styles other than `with lines` are already supported, although
	most styles are treated as either lines or impulses.  We now add support
	for `set contour; splot ... with labels`, which places contour labels on
	the plot itself.  Up till now this has been possible only by using an
	external script to generate and place labels (label_contours.awk).
 
	Format and placement options are controlled by a new command
	    set cntrlabel {start <int>} {interval <int>} {onecolor}
	    set cntrlabel {format "format-spec"} {font "font-spec"}
	`set cntrlabel onecolor` produces the same result as `unset clabel`.
	`set cntrlabel format "foo"` similarly replaces `set clabel "foo"`.
	The old command `set/unset clabel` is retained but is now deprecated.
	Precise layout of the contour labels can be further tweaked by using the
	usual label options in the splot command itself.  E.g.