@@ -8,6 +8,10 @@
 	* src/plot3d.c (eval_3dplots): Give a more informative error message
 	on "splot with labels" without a prior "set contour".
 
+	* src/qtterminal/QtGnuplotScene.cpp: Enhanced text elements were not
+	being added to the current plot group so that they could be toggled.
+	"center" justification was not being tracked.
+
 2012-05-18  Peter Juhasz  <juhaszp@users.sourceforge.net>
 
 	* src/datafile.c (f_column f_stringcolumn):
